Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5186

[Plasma] Crash on deleting CUDA memory

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.13.0
    • 0.14.0
    • C++

    Description

      cpp/CMakeLists.txt
        option(ARROW_CUDA "Build the Arrow CUDA extensions (requires CUDA toolkit)" ON)
        option(ARROW_PLASMA "Build the plasma object store along with Arrow" ON)

      [sample sequence]
      (1) call PlasmaClient::Create(id_object, data_size, 0, 0, &buff, 1) // where device_num != 0
      (2) call PlasmaClient::Seal(id_object)
      (3) call PlasmaClient::Release(id_object)
      (4) call PlasmaClient::Delete(id_object) // server carsh!

          • Aborted at 1555645923 (unix time) try "date -d @1555645923" if you are using GNU date ***
            PC: @     0x7f65bcfa1428 gsignal
          • SIGABRT (@0x3e800006d67) received by PID 28007 (TID 0x7f65bf225740) from PID 28007; stack trace: ***
                @     0x7f65bd347390 (unknown)
                @     0x7f65bcfa1428 gsignal
                @     0x7f65bcfa302a abort
                @           0x4a56cd dlfree
                @           0x4b4bc2 plasma::PlasmaAllocator::Free()
                @           0x4b7da3 plasma::PlasmaStore::EraseFromObjectTable()
                @           0x4b87d2 plasma::PlasmaStore::DeleteObject()
                @           0x4bb3d2 plasma::PlasmaStore::ProcessMessage()
                @           0x4b9195 _ZZN6plasma11PlasmaStore13ConnectClientEiENKUliE_clEi
                @           0x4bd752 _ZNSt17_Function_handlerIFviEZN6plasma11PlasmaStore13ConnectClientEiEUliE_E9_M_invokeERKSt9_Any_dataOi
                @           0x4ab998 std::function<>::operator()()
                @           0x4aaea7 plasma::EventLoop::FileEventCallback()
                @           0x4dbd8f aeProcessEvents
                @           0x4dbf50 aeMain
                @           0x4ab19b plasma::EventLoop::Start()
                @           0x4bfc93 plasma::PlasmaStoreRunner::Start()
                @           0x4bc34d plasma::StartServer()
                @           0x4bcfbd main
                @     0x7f65bcf8c830 __libc_start_main
                @           0x49e939 _start
                @                0x0 (unknown)
            Aborted (core dumped)

      Attachments

        Activity

          People

            shengjun.li shengjun.li
            shengjun.li shengjun.li
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 2.5h
                2.5h