ARROW-5186 [Plasma] fix carsh on delete gpu memory